upgrade index.html

--- a/Carlos/first_project/index.html
+++ b/Carlos/first_project/index.html
@@ -31,23 +31,28 @@
                 <li class="menu-item">
                     <a href="sidebar.html">Sidebar</a>
                 </li>     
+                <li class="menu-item">
+                    <a href="login.html">Login</a>
+                </li>   
            </ul>
        </nav>
        <section class="hero">
             <div class="container">
+                <div class="column is-6">
+                   <h1>
+                   Carlos Campos
+                   </h1>
+                   <h2>
+                       Lorem, ipsum dolor.
+                   </h2>
+                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, velit.
+                   </p>
+                   <input type="text" style="background-color: rgb(241,241,241); border-radius: 5px; border: 1px solid rgb(63,61,86);">
+                   <button style="color: orange; border: 2px solid rgb(63,61,86); border-radius: 5px; background-color: rgb(63,61,86);">Button button</button>
+               </div>
                 <figure class="column is-6">
                     <img class="image" src="../first_project/img/undraw_Code_review_re_woeb.svg" alt="">
                 </figure>
-                 <div class="column is-6">
-                    <h1>
-                    Carlos Campos
-                    </h1>
-                    <h2>
-                        Lorem, ipsum dolor.
-                    </h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, velit.
-                    </p>
-                </div>
             </div>
        </section>
     </header>
@@ -78,7 +83,7 @@
                 <div class="column is-4">
                     <div class="card">
                         <div class="card-cotent">
-                            <span class="icon is-purple">
+                            <span class="icon is-black">
                                 <i class="fas fa-chart-line"></i></span>
                             <h3>Section 3</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem fuga ratione illo dolore eligendi repellat, autem delectus officia deserunt possimus?</p>
@@ -101,16 +106,16 @@
             </div>
             <div class="column is-3">
                 <ul>
-                    <li>Alexandre</li>
-                    <li>Carlos Campos</li>
-                    <li>Inês Correia</li>
+                    <li><a href="">Alexandre</a></li>
+                    <li><a href="">Carlos Campos</a></li>
+                    <li><a href="">Inês Correia</a></li>
                 </ul>
             </div>
             <div class="column is-3">
                 <ul>
-                    <li>Pedro Barbosa</li>
-                    <li>Tânia Vieira</li>
-                    <li>Vitor Coelho</li>
+                    <li><a href="">Pedro Barbosa</a></li>
+                    <li><a href="">Tânia Vieira</a></li>
+                    <li><a href="">Vitor Coelho</a></li>
                 </ul>
             </div>
         </nav>
