--- a/Carlos/first_project/index.html
+++ b/Carlos/first_project/index.html
@@ -47,8 +47,8 @@
                    </h2>
                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, velit.
                    </p>
-                   <input type="text" style="background-color: rgb(241,241,241); border-radius: 5px; border: 1px solid rgb(63,61,86);">
-                   <button style="color: orange; border: 2px solid rgb(63,61,86); border-radius: 5px; background-color: rgb(63,61,86);">Button button</button>
+                   <input type="text" style="padding: 12px 10px; background-color: rgb(241,241,241); border-radius: 5px; border: 1px solid rgb(63,61,86);">
+                   <button style="padding: 12px 10px; color: orange; border: 2px solid rgb(63,61,86); border-radius: 5px; background-color: rgb(63,61,86);">Button button</button>
                </div>
                 <figure class="column is-6">
                     <img class="image" src="../first_project/img/undraw_Code_review_re_woeb.svg" alt="">
@@ -57,42 +57,100 @@
        </section>
     </header>
     <main>
+        <div class="container">
         <section class="main-section">
             <div class="row">
-                <div class="column is-4">
+                <h3 class="title is-3">
+                    Our specs
+                </h3>
+                    <div class="column is-4">
+                        <div class="card">
+                            <div class="card-cotent">
+                                <span class="icon is-yellow">
+                                    <i class="fas fa-chart-line"></i>
+                                </span>
+                                <h3>Section 1</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem fuga ratione illo dolore eligendi repellat, autem delectus officia deserunt possimus?</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column is-4">
+                        <div class="card">
+                            <div class="card-cotent">
+                                <span class="icon is-green">
+                                    <i class="fas fa-chart-line"></i></span>
+                                <h3>Section 2</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem fuga ratione illo dolore eligendi repellat, autem delectus officia deserunt possimus?</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column is-4">
+                        <div class="card">
+                            <div class="card-cotent">
+                                <span class="icon is-black">
+                                    <i class="fas fa-chart-line"></i></span>
+                                <h3>Section 3</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem fuga ratione illo dolore eligendi repellat, autem delectus officia deserunt possimus?</p>
+                            </div>
+                        </div>
+                    </div>
+                <h3 class="title is-3">
+                    Products
+                </h3>
+                <div class="column is-6">
                     <div class="card">
-                        <div class="card-cotent">
-                            <span class="icon is-yellow">
-                                <i class="fas fa-chart-line"></i>
-                            </span>
-                            <h3>Section 1</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem fuga ratione illo dolore eligendi repellat, autem delectus officia deserunt possimus?</p>
+                        <div class="product-card">
+                            <figure class="product-image">
+                                   <img src="img/products-img/Sapatos_Stan_Smith_Branco_Green.jpg" alt="">
+                            </figure>
+                            <div class="product-discretion">
+                                <h3>999.99€</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem fuga ratione illo dolore eligendi repellat, autem delectus officia deserunt possimus?</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="column is-4">
+                <div class="column is-6">
                     <div class="card">
-                        <div class="card-cotent">
-                            <span class="icon is-green">
-                                <i class="fas fa-chart-line"></i></span>
-                            <h3>Section 2</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem fuga ratione illo dolore eligendi repellat, autem delectus officia deserunt possimus?</p>
+                        <div class="product-card">
+                            <figure class="product-image">
+                                <img src="img/products-img/Sapatos_Stan_Smith_Branco_Green.jpg" alt="">
+                            </figure>
+                            <div class="product-discretion">
+                                <h3>999.99€</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem fuga ratione illo dolore eligendi repellat, autem delectus officia deserunt possimus?</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="column is-4">
+                <div class="column is-6">
                     <div class="card">
-                        <div class="card-cotent">
-                            <span class="icon is-black">
-                                <i class="fas fa-chart-line"></i></span>
-                            <h3>Section 3</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem fuga ratione illo dolore eligendi repellat, autem delectus officia deserunt possimus?</p>
+                        <div class="product-card">
+                            <figure class="product-image">
+                                   <img src="img/products-img/Sapatos_Stan_Smith_Branco_Green.jpg" alt="">
+                            </figure>
+                            <div class="product-discretion">
+                                <h3>999.99€</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem fuga ratione illo dolore eligendi repellat, autem delectus officia deserunt possimus?</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                
-            </div>
+                <div class="column is-6">
+                    <div class="card">
+                        <div class="product-card">
+                            <figure class="product-image">
+                                <img src="img/products-img/Sapatos_Stan_Smith_Branco_Green.jpg" alt="">
+                            </figure>
+                            <div class="product-discretion">
+                                <h3>999.99€</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem fuga ratione illo dolore eligendi repellat, autem delectus officia deserunt possimus?</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </section>
+    </div>
     </main>
     <footer class="footer">
         <nav class="fotter-nav">
