minor updates to products page

--- a/jose/products/product-1.html
+++ b/jose/products/product-1.html
@@ -13,9 +13,9 @@
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" />
   <link rel="stylesheet" href="../styles/main.css" />
-  <link rel="stylesheet" href="components/grid/grid.css" />
-  <link rel="stylesheet" href="components/buttons/buttons.css" />
-  <link rel="stylesheet" href="components/forms/forms.css" />
+  <link rel="stylesheet" href="../components/grid/grid.css" />
+  <link rel="stylesheet" href="../components/buttons/buttons.css" />
+  <link rel="stylesheet" href="../components/forms/forms.css" />
   <link rel="stylesheet" href="product.css" />
 </head>
 
@@ -54,99 +54,99 @@
   </header>
 
   <main id="content">
-    <article class="product-section">
-      <div class="slider product-slider">
-        <div class="slider-item">
-          <figure class="image">
-            <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
-          </figure>
-          <div class="slider-detail">
-            <h4 class="title is-4">Lorem ipsum dolor sit amet.</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error labore optio velit
-              sequi. Quam excepturi repudiandae repellendus illo, praesentium minus?</p>
-            <button type="button" class="button">
-              Learn more
-            </button>
-          </div>
-        </div>
-        <div class="slider-item">
-          <figure class="image">
-            <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
-          </figure>
-          <div class="slider-detail">
-            <h4 class="title is-4">Lorem ipsum dolor sit amet.</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error labore optio velit
-              sequi. Quam excepturi repudiandae repellendus illo, praesentium minus?</p>
-            <button type="button" class="button">
-              Learn more
-            </button>
-          </div>
-        </div>
-        <div class="slider-item">
-          <figure class="image">
-            <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
-          </figure>
-          <div class="slider-detail">
-            <h4 class="title is-4">Lorem ipsum dolor sit amet.</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error labore optio velit
-              sequi. Quam excepturi repudiandae repellendus illo, praesentium minus?</p>
-            <button type="button" class="button">
-              Learn more
-            </button>
-          </div>
-        </div>
-
-      </div>
-      <div class="product-detail">
-        <h3 class="title is-3">
-          Jogo Nintendo Switch Super Mario 3D World + Bowser's Fury
-        </h3>
-        <div class="stars">
-          <span class="icon">
-            <i class="fas fa-star"></i>
-          </span>
-          <span class="icon">
-            <i class="fas fa-star"></i>
-          </span>
-          <span class="icon">
-            <i class="fas fa-star"></i>
-          </span>
-          <span class="icon">
-            <i class="fas fa-star-half-alt"></i>
-          </span>
-          <span class="icon">
-            <i class="far fa-star"></i>
-          </span>
-        </div>
-
-        <div class="tabs-wrapper">
-          <ul class="tabs">
-            <li class="tab">
-              Sandbox
-            </li>
-            <li class="tab">
-              Other offers
-            </li>
-          </ul>
-
-          <div class="tab-content">
-            <div class="row">
-              <div class="column is-6">
-                <span class="sales-price">$299</span>
-                <span class="price">$399</span>
+    <section class="section product-section">
+      <div class="container">
+        <div class="row">
+          <div class="column is-6">
+            <div class="slider product-slider">
+              <figure class="image slider-image">
+                <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
+              </figure>
+              <div class="slider-items">
+                <div class="slider-item">
+                  <figure class="image">
+                    <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
+                  </figure>
+                  <!-- <div class="slider-detail">
+                    <h4 class="title is-4">Lorem ipsum dolor sit amet.</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error labore optio velit
+                      sequi. Quam excepturi repudiandae repellendus illo, praesentium minus?</p>
+                    <button type="button" class="button">
+                      Learn more
+                    </button>
+                  </div> -->
+                </div>
+                <div class="slider-item">
+                  <figure class="image">
+                    <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
+                  </figure>
+                </div>
+                <div class="slider-item">
+                  <figure class="image">
+                    <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
+                  </figure>
+  
+                </div>
               </div>
-              <div class="column is-6">
-                <button type="button" class="button is-primary">Add to cart</button>
+           
+
+            </div>
+          </div>
+          <div class="column is-6">
+            <div class="product-detail">
+              <h3 class="title is-3">
+                Jogo Nintendo Switch Super Mario 3D World + Bowser's Fury
+              </h3>
+              <div class="stars">
+                <span class="icon">
+                  <i class="fas fa-star"></i>
+                </span>
+                <span class="icon">
+                  <i class="fas fa-star"></i>
+                </span>
+                <span class="icon">
+                  <i class="fas fa-star"></i>
+                </span>
+                <span class="icon">
+                  <i class="fas fa-star-half-alt"></i>
+                </span>
+                <span class="icon">
+                  <i class="far fa-star"></i>
+                </span>
+              </div>
+
+              <div class="tabs-wrapper">
+                <ul class="tabs">
+                  <li class="tab">
+                    Sandbox
+                  </li>
+                  <li class="tab">
+                    Other offers
+                  </li>
+                </ul>
+
+                <div class="tab-content">
+                  <div class="row">
+                    <div class="column is-6">
+                      <span class="sales-price">$299</span>
+                      <span class="price">$399</span>
+                    </div>
+                    <div class="column is-6">
+                      <button type="button" class="button is-primary">Add to cart</button>
+                    </div>
+                  </div>
+
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, maiores.</p>
+                  <a href="../index.html#product-row">See other products</a>
+                </div>
+
               </div>
             </div>
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, maiores.</p>
-            <a href="../index.html#product-row">See other products</a>
           </div>
-
         </div>
       </div>
-    </article>
+
+    </section>
 
   </main>
 </body>
