--- a/Carlos/first_project/index.html
+++ b/Carlos/first_project/index.html
@@ -57,6 +57,23 @@
        </section>
     </header>
     <main>
+        <h3 class="title is-3 container" style="margin-top: 15px; align-items: center;">
+            NEW
+        </h3>
+        <div class="carousel">
+            <input type="radio" name="position" />
+              <input type="radio" name="position" />
+              <input type="radio" name="position" checked />
+              <input type="radio" name="position" />
+              <input type="radio" name="position" />
+              <main id="carousel">
+            <div class="item"><img src="img/products-img/Sapatos_Stan_Smith.jpg" style="border: 1px solid rgb(150, 150, 150);"></div>
+            <div class="item"><img src="img/products-img/Sapatos_Stan_Smith_Branc.jpg" style="border: 1px solid rgb(150, 150, 150);"></a></div>
+            <div class="item"><img src="img/products-img/Sapatos_Stan_Smith_Branco.jpg" style="border: 1px solid rgb(150, 150, 150);"></div>
+            <div class="item"><img src="img/products-img/Sapatos_Stan_Smith_Branco.jpg" style="border: 1px solid rgb(150, 150, 150);"></div>
+            <div class="item"><img src="img/products-img/Sapatos_Stan_Smith_Branco_Green.jpg" style="border: 1px solid rgb(150, 150, 150);"></div>
+            <main>
+            </div>
         <div class="container">
         <section class="main-section">
             <div class="row">
