--- a/Carlos/first_project/index.html
+++ b/Carlos/first_project/index.html
@@ -32,7 +32,7 @@
                     <a href="sidebar.html">Sidebar</a>
                 </li>     
                 <li class="menu-item">
-                    <a href="login.html">Login</a>
+                    <a href="login.html" class="button is-success">Login</a>
                 </li>   
            </ul>
        </nav>
