--- a/jose/index.html
+++ b/jose/index.html
@@ -167,7 +167,7 @@
                 <h3 class="title is-3">
                     Products
                 </h3>
-                <div class="row" id="product-row">
+                <div class="row is-multiline" id="product-row">
                     <div class="column is-6">
                         <div class="card product-card">
                             <div class="card-content">
