--- a/jose/products/product-1.html
+++ b/jose/products/product-1.html
@@ -63,7 +63,7 @@
                 <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
               </figure>
               <div class="slider-items">
-                <div class="slider-item">
+                <div class="slider-item is-active">
                   <figure class="image">
                     <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
                   </figure>
@@ -85,11 +85,18 @@
                   <figure class="image">
                     <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
                   </figure>
-  
+                </div>
+                <div class="slider-item">
+                  <figure class="image">
+                    <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
+                  </figure>
+                </div>
+                <div class="slider-item">
+                  <figure class="image">
+                    <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
+                  </figure>
                 </div>
               </div>
-           
-
             </div>
           </div>
           <div class="column is-6">
@@ -117,7 +124,7 @@
 
               <div class="tabs-wrapper">
                 <ul class="tabs">
-                  <li class="tab">
+                  <li class="tab is-active">
                     Sandbox
                   </li>
                   <li class="tab">
@@ -128,15 +135,20 @@
                 <div class="tab-content">
                   <div class="row">
                     <div class="column is-6">
-                      <span class="sales-price">$299</span>
-                      <span class="price">$399</span>
+                      <p class="sales-price">$299</p>
+                      <p class="price">$399</span>
                     </div>
-                    <div class="column is-6">
-                      <button type="button" class="button is-primary">Add to cart</button>
+                    <div class="column is-6" style="padding:0">
+                      <button type="button" class="button is-primary is-large is-fullwidth">Add to cart</button>
                     </div>
                   </div>
 
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, maiores.</p>
+                  <p style="margin-bottom:16px;">
+                    <span class="has-text-green"> <i class="fas fa-star"
+                        style="display:inline-block;margin-right:4px;"></i>Disponível</span>
+                    Entrega estimada em 1 a 2 dias úteis
+
+                  </p>
                   <a href="../index.html#product-row">See other products</a>
                 </div>
 
