--- a/tvieira/index.html
+++ b/tvieira/index.html
@@ -25,7 +25,7 @@
         <figure class="logo">
             <img src="/tvieira/Img/rodacork.png" alt="logo">
             <span class="page-title is-vertical-middle">
-                RodaCork
+                RodaCork2
             </span>
         </figure>
 
