--- a/Carlos/first_project/buttons.html
+++ b/Carlos/first_project/buttons.html
@@ -11,32 +11,32 @@
 </head>
 <body> 
     <header class="header">
-       <figure class="logo">
-           <img src="img/logo.png" alt="">
-           <span class="page-title">
-            Sandbox
-            </span>
-        </figure> 
-       <nav class="navbar">
-           <ul class="menu-list">
-                <li class="menu-item">
-                    <a href="buttons.html">Buttons</a>
-                </li>
-                <li class="menu-item">
-                    <a href="cards.html">Cards</a>
-                </li>
-                <li class="menu-item">
-                    <a href="forms.html">Forms</a>
-                </li>
-                <li class="menu-item">
-                    <a href="sidebar.html">Sidebar</a>
-                </li>     
-                <li class="menu-item">
-                    <a href="login.html" class="button is-success">Login</a>
-                </li>   
-           </ul>
-       </nav>
-       
+        <figure class="logo">
+            <a href="index.html">
+            <img src="img/logo.png" alt="">
+            <span class="page-title">
+             Sandbox
+             </span>
+             </a>
+         </figure> 
+        <nav class="navbar">
+            <ul class="menu-list">
+                 <li class="menu-item">
+                     <a href="buttons.html">Buttons</a>
+                 </li>
+                 <li class="menu-item">
+                     <a href="cards.html">Cards</a>
+                 </li>
+                 <li class="menu-item">
+                     <a href="forms.html">Forms</a>
+                 </li>
+                 <li class="menu-item">
+                     <a href="sidebar.html">Sidebar</a>
+                 </li>     
+                 <li class="menu-item">
+                     <a href="login.html" class="button is-success" style="border: 1px solid #3F3D56;">Login</a>
+                 </li>   
+            </ul>
     </header>
     <main class="buttons-page">
         <div class="container">
