--- a/Carlos/first_project/index.html
+++ b/Carlos/first_project/index.html
@@ -11,11 +11,13 @@
 </head>
 <body> 
     <header class="header">
-       <figure class="logo">
+        <figure class="logo">
+           <a href="index.html">
            <img src="img/logo.png" alt="">
            <span class="page-title">
             Sandbox
             </span>
+            </a>
         </figure> 
        <nav class="navbar">
            <ul class="menu-list">
@@ -32,7 +34,7 @@
                     <a href="sidebar.html">Sidebar</a>
                 </li>     
                 <li class="menu-item">
-                    <a href="login.html" class="button is-success">Login</a>
+                    <a href="login.html" class="button is-success" style="border: 1px solid #3F3D56;">Login</a>
                 </li>   
            </ul>
        </nav>
