--- a/tvieira/index.html
+++ b/tvieira/index.html
@@ -5,52 +5,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roda-Cork</title>
+    <title>RodaCork</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/tvieira/main.css" />
-    <link rel="stylesheet buttons" href="/tvieira/Components/Buttons/button.css" > 
-    <link rel="stylesheet cards" href="/tvieira/Components/Cards/cards.css" > 
-    <link rel="stylesheet forms" href="/tvieira/Components/forms/forms.css" > 
-    <link rel="stylesheet sidebar" href="/tvieira/Components/sidebar/sidebar.css" > 
-    <link rel="stylesheet" href="/tvieira/Components/Grid/grid.css" />
+    <link rel="stylesheet" href="/tvieira/styles/main.css" />
+    <link rel="stylesheet buttons" href="/tvieira/components/buttons/buttons.css" > 
+    <link rel="stylesheet forms" href="/tvieira/components/forms/forms.css" > 
+    <link rel="stylesheet" href="/tvieira/components/grid/grid.css"> 
+    <link rel="stylesheet cards" href="/tvieira/components/cards/cards.css" >
 
 </head>
 
 <body>
 
     <header class="header">
-        
-        <figure class="logo">
-            <img src="/tvieira/Img/rodacork.png" alt="logo">
-            <span class="page-title is-vertical-middle">
-                RodaCork2
-            </span>
-        </figure>
+        <div class="navbar-wrapper">
+            <a href="/tvieira/index.html"> 
+                <figure class="logo">
+                    <img src="/tvieira/images/rodacork.png" alt="logo Rodacork">
+                    <span class="page-title is-vertical-middle">
+                        RodaCork
+                    </span>
+                </figure>
+            </a>
 
     <nav class="navbar">
         <ul class="menu-list">
             <li class="menu-item">
-                <a href="Components/Buttons/index.html" target="_blank">Buttons</a>
+                <a href="/tvieira/components/buttons/index.html" target="_blank">Buttons</a>
             </li>
             <li class="menu-item">
-                <a href="Components/Cards/index.html" target="_blank">Cards</a>
+                <a href="/tvieira/components/cards/index.html" target="_blank">Cards</a>
             </li>
             <li class="menu-item">
-                <a href="Components/forms/index.html" target="_blank">Forms</a>
+                <a href="/tvieira/components/forms/index.html" target="_blank">Forms</a>
             </li>
             <li class="menu-item">
-                <a href="Components/sidebar/index.html" target="_blank">Sidebar</a>
+                <a href="/tvieira/components/sidebar/index.html" target="_blank">Sidebar</a>
             </li>
             <li class="menu-item">
-                <a href="Components/Grid/index.html" target="_blank">Grid</a>
+                <a href="/tvieira/components/grid/index.html" target="_blank">Grid</a>
             </li>
             <li class="menu-item">
-                <a href="login.html" class="button is-success" style="margin-left:16px;">Grid</a>
+                <a href="/tvieira/dashboard/index.html" target="_blank">Dashboard</a>
+            </li>
+            <li class="menu-item">
+                <a href="/tvieira/register-login/login.html" target="_blank" class="button is-primary-orange" style="margin-left:16px;">Login</a>
             </li>
         </ul>
     </nav>
+    </header>
 
     <section class="hero">
         <div class="container">
@@ -134,7 +139,7 @@
         <div class="row">
             <div class="column is-6">
             <figure class="logo">
-                <img src="Img/rodacork.png" alt="logo">
+                <img src="/tvieira/images/rodacork.png" alt="logo RodaCork">
                 <span>RodaCork</span>
             </figure>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, velit.</p>
