navbar and footer

--- a/Carlos/first_project/forms.html
+++ b/Carlos/first_project/forms.html
@@ -88,5 +88,31 @@
         </div>
         </div>
     </main>
+    <footer class="footer">
+        <nav class="fotter-nav">
+            <div class="column is-3">
+                <figure class="logo">
+                    <img src="img/logo.png" alt="">
+                    <span>Sanbox</span>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum adipisci quas deleniti expedita illo quidem.</p>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </figure>
+            </div>
+            <div class="column is-3">
+                <ul>
+                    <li><a href="">Alexandre</a></li>
+                    <li><a href="">Carlos Campos</a></li>
+                    <li><a href="">Inês Correia</a></li>
+                </ul>
+            </div>
+            <div class="column is-3">
+                <ul>
+                    <li><a href="">Pedro Barbosa</a></li>
+                    <li><a href="">Tânia Vieira</a></li>
+                    <li><a href="">Vitor Coelho</a></li>
+                </ul>
+            </div>
+        </nav>
+    </footer>
 </body>
 </html>
