--- a/vitor/index.html
+++ b/vitor/index.html
@@ -1,4 +1,9 @@
 <!-- The shortcut to make structure of HTML is (!) -->
+<!-- test 1 -->
+<!-- test 2 -->
+<!-- test 3 -->
+<!-- teste 4-->
+
 
 <!DOCTYPE html>
 <html lang="en">
