--- a/jose/index.html
+++ b/jose/index.html
@@ -86,110 +86,112 @@
             </div>
         </section>
         <section class="main-section">
-            <div class="row">
-                <div class="column is-4">
-                    <div class="card">
-                        <div class="card-content">
-                            <span class="icon is-yellow">
-                                <i class="fas fa-chart-bar"></i>
-                            </span>
-                            <h3>Section 1</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore?
-                                Praesentium,
-                                doloremque?
-                            </p>
+            <div class="container">
+                <div class="row">
+                    <div class="column is-4">
+                        <div class="card">
+                            <div class="card-content">
+                                <span class="icon is-yellow">
+                                    <i class="fas fa-chart-bar"></i>
+                                </span>
+                                <h3>Section 1</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore?
+                                    Praesentium,
+                                    doloremque?
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column is-4">
+                        <div class="card">
+                            <div class="card-content">
+                                <span class="icon is-yellow">
+                                    <i class="fas fa-chart-bar"></i>
+                                </span>
+                                <h3>Section 1</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore?
+                                    Praesentium,
+                                    doloremque?
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="column is-4">
+                        <div class="card">
+                            <div class="card-content">
+                                <span class="icon is-yellow">
+                                    <i class="fas fa-chart-bar"></i>
+                                </span>
+                                <h3>Section 1</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore?
+                                    Praesentium,
+                                    doloremque?
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="column is-4">
-                    <div class="card">
-                        <div class="card-content">
-                            <span class="icon is-yellow">
-                                <i class="fas fa-chart-bar"></i>
-                            </span>
-                            <h3>Section 1</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore?
-                                Praesentium,
-                                doloremque?
-                            </p>
+                <h3 class="title is-3">
+                    Products
+                </h3>
+                <div class="row is-multiline" id="product-row">
+                    <div class="column is-6">
+                        <div class="card product-card">
+                            <div class="card-content">
+                                <figure class="product-image">
+                                </figure>
+                                <div class="product-detail">
+                                    <h4 class="title is-4">
+                                        Cold Pressed Bitality Shot - 250ml
+                                    </h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, qui!</p>
+                                    <span class="sales-price">$299</span>
+                                    <span class="price">$399</span>
+                                    <div class="buttons">
+                                        <button type="button" class="button is-primary">
+                                            Buy now!
+                                        </button>
+                                        <a href="products/product-1.html" type="button" class="button">
+                                            Learn more
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="column is-4">
-                    <div class="card">
-                        <div class="card-content">
-                            <span class="icon is-yellow">
-                                <i class="fas fa-chart-bar"></i>
-                            </span>
-                            <h3>Section 1</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                Natus quasi recusandae cupiditate commodi doloribus voluptatem sit aut dolore?
-                                Praesentium,
-                                doloremque?
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <h3 class="title is-3">
-                Products
-            </h3>
-            <div class="row is-multiline" id="product-row">
-                <div class="column is-6">
-                    <div class="card product-card">
-                        <div class="card-content">
-                            <figure class="product-image">
-                            </figure>
-                            <div class="product-detail">
-                                <h4 class="title is-4">
-                                    Cold Pressed Bitality Shot - 250ml
-                                </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, qui!</p>
-                                <span class="sales-price">$299</span>
-                                <span class="price">$399</span>
-                                <div class="buttons">
-                                    <button type="button" class="button is-primary">
-                                        Buy now!
-                                    </button>
-                                    <a href="products/product-1.html" type="button" class="button">
-                                        Learn more
-                                    </a>
+                    <div class="column is-6">
+                        <div class="card product-card">
+                            <div class="card-content">
+                                <figure class="product-image">
+                                </figure>
+                                <div class="product-detail">
+                                    <h4 class="title is-4">
+                                        Cold Pressed Bitality Shot - 250ml
+                                    </h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, qui!</p>
+                                    <span class="sales-price">$299</span>
+                                    <span class="price">$399</span>
+                                    <div class="buttons">
+                                        <button type="button" class="button is-primary">
+                                            Buy now!
+                                        </button>
+                                        <a href="products/cold-pressed-bitality-1.html" type="button" class="button">
+                                            Learn more
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="column is-6">
-                    <div class="card product-card">
-                        <div class="card-content">
-                            <figure class="product-image">
-                            </figure>
-                            <div class="product-detail">
-                                <h4 class="title is-4">
-                                    Cold Pressed Bitality Shot - 250ml
-                                </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, qui!</p>
-                                <span class="sales-price">$299</span>
-                                <span class="price">$399</span>
-                                <div class="buttons">
-                                    <button type="button" class="button is-primary">
-                                        Buy now!
-                                    </button>
-                                    <a href="products/cold-pressed-bitality-1.html" type="button" class="button">
-                                        Learn more
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
-        
+
             </div>
         </section>
     </main>
