random change again

--- a/jose/dashboard.html
+++ b/jose/dashboard.html
@@ -23,7 +23,7 @@
         <figure class="logo">
           <img src="../images/company_logo.png" alt="Company logo">
           <span class="page-title">
-            Sandbox
+            Sandbox 123
           </span>
         </figure>
       </a>
