--- a/tvieira/login.html
+++ b/tvieira/login.html
@@ -5,20 +5,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roda-Cork</title>
+    <title>Products</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/tvieira/main.css" />
-    <link rel="stylesheet buttons" href="/tvieira/Components/Buttons/button.css" > 
-    <link rel="stylesheet cards" href="/tvieira/Components/Cards/cards.css" > 
-    <link rel="stylesheet forms" href="/tvieira/Components/forms/forms.css" > 
-    <link rel="stylesheet sidebar" href="/tvieira/Components/sidebar/sidebar.css" > 
-    <link rel="stylesheet" href="/tvieira/Components/Grid/grid.css" />
+    <link rel="stylesheet" href="/tvieira/css/all.css" />
 
 </head>
 
-<main class="register-page">
+<body class="">
+
+    <header class="header">
+        <div class="navbar-wrapper">
+            <a href="index.html">        
+        <figure class="logo">
+            <img src="/tvieira/images/rodacork.png" alt="logo Rodacork">
+            <span class="page-title is-vertical-middle">
+                RodaCork
+            </span>
+        </figure>
+
+    <nav class="navbar">
+        <ul class="menu-list">
+            <li class="menu-item">
+                <a href="/tvieira/components/buttons/index.html" target="_blank">Buttons</a>
+            </li>
+            <li class="menu-item">
+                <a href="/tvieira/components/cards/index.html" target="_blank">Cards</a>
+            </li>
+            <li class="menu-item">
+                <a href="/tvieira/components/forms/index.html" target="_blank">Forms</a>
+            </li>
+            <li class="menu-item">
+                <a href="/tvieira/components/sidebar/index.html" target="_blank">Sidebar</a>
+            </li>
+            <li class="menu-item">
+                <a href="/tvieira/components/grid/index.html" target="_blank">Grid</a>
+            </li>
+            <li class="menu-item">
+                <a href="/tvieira/dashboard/index.html" target="_blank">Dashboard</a>
+            </li>
+            <li class="menu-item">
+                <a href="/tvieira/products/product-1.html" target="_blank">Product-1</a>
+            </li>
+        </ul>
+    </nav>
+    </header>
+
+<main class="login-page">
     <div class="container is-small">
         <section class="login-section">
         <div class="card">
@@ -31,8 +65,7 @@
                         <label for="input-email" class="input">Email</label>
                         <input type="email" id="input-name" placeholder="please insert your email" class="input">
                         <span class="message">
-                            <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
-                            Your email is invalid!
+                            Your email is invalid
                         </span>
                     </div>
         
@@ -40,40 +73,9 @@
                         <label for="input-name" class="input">Password</label>
                         <input type="password" id="input-password" max="5" placeholder="Please Insert your password" class="input">
                         <span class="message is-info">
-                            <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
                             Your past must contain at least 1 character 
                         </span>
                     </div>
-
-                    <div class="field">
-                        <label for="input-name" class="input">Confirm Password</label>
-                        <input type="password" id="input-password" max="5" placeholder="Please Confirm your password" class="input">
-                        <span class="message is-info">
-                            <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
-                            Your past must contain at least 1 character 
-                        </span>
-                    </div>
-
-                    
-                    <div class="field">
-                        <label for="input-birth">Your birthday</label>
-                        <input type="date" id="input-birth" placeholder="your birthday" class="input">
-                    </div>
-
-                    <label>Select a thing</label>
-                    <div class="control">
-                        <label for="radio-thing-1">Thing 1</label>
-                        <input type="checkbox" id="radio-thing-1" value="thing-1" name="radio-thing" class="checkbox" checked>
-                    </div>
-                    <div class="control">
-                        <label for="radio-thing-2">Thing 2</label>
-                        <input type="checkbox" id="radio-thing-2" value="thing-2" name="radio-thing" class="checkbox">
-                    </div>
-                     <div class="control">
-                        <label for="radio-thing-3">Thing 3</label>
-                        <input type="checkbox" id="radio-thing-3" value="thing-3" name="radio-thing" class="checkbox">
-                    </div>
-
 
                     <a href="/recover-password.html"></a>
                 </form>
@@ -91,7 +93,7 @@
         <div class="row">
             <div class="column is-6">
             <figure class="logo">
-                <img src="Img/rodacork.png" alt="logo">
+                <img src="/tvieira/images/rodacork.png" alt="logo RodaCork">
                 <span>RodaCork</span>
             </figure>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, velit.</p>
@@ -102,21 +104,10 @@
     <div clas="column is-3">
         <ul class="menu-list">
             <li class="menu-item">
-                <a href="Alexandre/index.html" target="_blank">Alexandre</a>
+                <a href="/Alexandre/index.html" target="_blank">Alexandre</a>
             </li>
             <li class="menu-item">
-                <a href="Carlos/index.html" target="_blank">Carlos Campos</a>
-            </li>
-        </ul>
-    </div>
-
-    <div clas="column is-3">
-        <ul class="menu-list">
-            <li class="menu-item">
-                <a href="inesCorreia/index.html" target="_blank">Inês Correia</a>
-            </li>
-            <li class="menu-item">
-                <a href="pedro/index.html" target="_blank">Pedro Barbosa</a>
+                <a href="/Carlos/first_project/index.html" target="_blank">Carlos Campos</a>
             </li>
         </ul>
     </div>
@@ -124,14 +115,29 @@
     <div clas="column is-3">
         <ul class="menu-list">
             <li class="menu-item">
-                <a href="tvieira/index.html" target="_blank">Tânia Vieira</a>
+                <a href="/inesfolder/index.html" target="_blank">Inês Correia</a>
+            </li>
+            <li class="menu-item">
+                <a href="/pedro/index.html" target="_blank">Pedro Barbosa</a>
+            </li>
+        </ul>
+    </div>
+
+    <div clas="column is-3">
+        <ul class="menu-list">
+            <li class="menu-item">
+                <a href="/tvieira/index.html" target="_blank">Tânia Vieira</a>
             </li>
 
             <li class="menu-item">
-                <a href="vitor/index.html" target="_blank">Vitor Coelho</a>
+                <a href="/vitor/index.html" target="_blank">Vitor Coelho</a>
             </li>
         </ul>
     </div>
 </div>
 </nav>
 </footer>
+
+</body>
+
+</html>
