--- a/tvieira/register-password.html
+++ b/tvieira/register-password.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body>
+<body class="">
 
     <header class="header">
         <div class="navbar-wrapper">
@@ -48,91 +48,50 @@
             <li class="menu-item">
                 <a href="/tvieira/products/product-1.html" target="_blank">Product-1</a>
             </li>
-            <li class="menu-item">
-                <a href="/tvieira/login.html" class="button is-primary-black is-small" style="margin-left:16px;" target="_blank">Login</a>
-            </li>
         </ul>
     </nav>
     </header>
 
-    <section class="hero">
-        <div class="container">
-            <div class="row">
-                <figure class="column is-6">
-                    <img class="image" src="/tvieira/images/undraw_off_road_9oae.svg" alt="Hero Image">
-                </figure>
-            
-                <div class="column is-6 is-vertical-top">
-                    <h1 class="title is-1">
-                        My page title
-                    </h1>
-                    <h2 class="subtitle">My page subtitle</h2>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                        Explicabo, atque quas ipsum distinctio earum esse laborum fugit 
-                        alias quos facilis.
-                    </p>
-                </div>
-            </div>
+  <main class="login-page">
+    <div class="container is-small">
+      <section class="login-section">
+        <div class="card">
+          <div class="card-content">
+            <h3 class="title is-3">Register</h3>
+            <h6 class="subtitle">Sign up for a free account today</h6>
+            <hr>
+            <form class="form login-form">
+              <div class="field">
+                <label for="input-name">Password</label>
+                <input type="password" id="input-password" name="input_password"
+                  placeholder="Please insert your password" class="input">
+                <span class="message is-info">
+                  <i class="fas fa-exclamation-circle"></i>
+                  Your password must contain at least 1 character
+                </span>
+              </div>
+              <div class="field">
+                <label for="input-name">Confirm password</label>
+                <input type="password" id="input-password-confirm" name="input_password_confirm"
+                  placeholder="Please re-insert your password" class="input">
+                <span class="message is-danger">
+                  <i class="fas fa-exclamation-circle"></i>
+                  Your passwords must match
+                </span>
+              </div>
+
+              <div class="buttons is-spaced-between">
+                <a href="index.html" type="button" class="button is-primary">
+                  Register
+                </a>
+              </div>
+            </form>
+          </div>
         </div>
-    </section> 
-
-    </header>
-
-<main id="content">
-    <section class="main-section">
-        <div class="row">
-            <div class="column is-4">
-                <div class="card">
-                    <div class="card-content">
-                        <span class="icon is-yellow">
-                            <i class="fas fa-chart-bar"></i>
-                        </span>
-                        <h3> Section 1</h3>
-                        <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                        Nemo saepe adipisci reprehenderit voluptatibus dicta, 
-                        modi eligendi aliquam tempora quod praesentium!
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="column is-4">
-                <div class="card">
-                    <div class="card-content">
-                        <span class="icon is-green">
-                            <i class="fas fa-user"></i>
-                        </span>
-                        <h3> Section 2</h3>
-                        <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                        Nemo saepe adipisci reprehenderit voluptatibus dicta, 
-                        modi eligendi aliquam tempora quod praesentium!
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="column is-4">
-                <div class="card">
-                    <div class="card-content">
-                        <span class="icon is-purple">
-                            <i class="fas fa-search"></i>
-                        </span>
-                        <h3> Section 3</h3>
-                        <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                            Nemo saepe adipisci reprehenderit voluptatibus dicta, 
-                            modi eligendi aliquam tempora quod praesentium!
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-</main>
-   
-<footer class="footer">
+      </section>
+    </div>
+  </main>
+  <footer class="footer">
     <nav class="footer-nav">
         <div class="row">
             <div class="column is-6">
