--- a/pedro/competencias.html
+++ b/pedro/competencias.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,400;1,500&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -37,8 +40,8 @@
             </ul>
         </nav>
     </header>
-    <section class="hero">
-        <div class="container">
+    <section class="section-main">
+        <div class="main">
 
         </div>
     </section>
