--- a/Carlos/cards.html
+++ b/Carlos/cards.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Forms</title>
+        <title>Cards</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&display=swap"
           rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
           integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
           crossorigin="anonymous" />
-          <link rel="stylesheet" href="scss/cards.css" />
+          <link rel="stylesheet" href="css/style.css" />
         </head>
 <body> 
     <header class="header">
@@ -47,7 +47,7 @@
                     <img src="img/products-img/Sapatos_Stan_Smith_Branco_Green.jpg" alt="">
                 </figure>
                 <div class="product-discretion">
-                    <h3>999.99€</h3>
+                    <h3>9999999999.99€</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem fuga ratione illo dolore eligendi repellat, autem delectus officia deserunt possimus?</p>
                 </div>
             </div>
