Update to pull request

--- a/tvieira/index.html
+++ b/tvieira/index.html
@@ -65,9 +65,9 @@
                 <div class="row">
                     <div class="column is-7 is-vertical-top">
                         <h1 class="title is-1">
-                            My page title
+                            Green or Red apple, who cares?
                         </h1>
-                        <h2 class="subtitle">My page subtitle</h2>
+                        <h2 class="subtitle">As long it tastes orange</h2>
                         <p>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                             Explicabo, atque quas ipsum distinctio earum esse laborum fugit 
@@ -75,12 +75,12 @@
                         </p>
                         <div class="row is-small">
                             <div class="column is-7">
-                                <input type="text" id="input-name" placeholder="Please insert your name"
+                                <input type="text" id="input-name" placeholder="Please insert your color preference"
                                         class="input is-dark">
                             </div>
                         </div>
                         <div class="column is-5">
-                            <button type="button" class="button is-primary">Get early access</button>
+                            <button type="button" class="button is-primary-orange">Find out more about me</button>
                         </div>
                     </div>
                 </div>
