initial products page structure

--- a/jose/products/product-1.html
+++ b/jose/products/product-1.html
@@ -12,11 +12,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" />
-  <link rel="stylesheet" href="../styles/main.css" />
-  <link rel="stylesheet" href="../components/grid/grid.css" />
-  <link rel="stylesheet" href="../components/buttons/buttons.css" />
-  <link rel="stylesheet" href="../components/forms/forms.css" />
-  <link rel="stylesheet" href="product.css" />
+  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/products.css" />
 </head>
 
 <body>
@@ -54,90 +51,104 @@
   </header>
 
   <main id="content">
-    <section class="section product-section">
+    <section class="section products-section">
       <div class="container">
         <div class="row">
           <div class="column is-6">
             <div class="slider">
 
-              <div class="slides">
-                <div id="slide-1">
-                  <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
-                </div>
-                <div id="slide-2">
-                  <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
-                </div>
-                <div id="slide-3">
-                  <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
-                </div>
-                <div id="slide-4">
-                  <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
-                </div>
-              </div>
+              <figure class="image slider-image">
+                <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
+              </figure>
+              <ul class="slider-items">
+                <li class="slider-item">
+                  <figure class="image">
+                    <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
+                  </figure>
+                </li>
+                <li class="slider-item">
+                  <figure class="image">
+                    <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
+                  </figure>
 
-              <a href="#slide-1"><img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt=""></a>
-              <a href="#slide-2"><img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt=""></a>
-              <a href="#slide-3"><img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt=""></a>
-              <a href="#slide-4"><img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt=""></a>
+                </li>
+                <li class="slider-item">
+                  <figure class="image">
+                    <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
+                  </figure>
+
+                </li>
+                <li class="slider-item">
+                  <figure class="image">
+                    <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
+                  </figure>
+                </li>
+                <li class="slider-item">
+                  <figure class="image">
+                    <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
+                  </figure>
+                </li>
+              </ul>
+
             </div>
-          </div>
-          <div class="column is-6">
-            <div class="product-detail">
-              <h3 class="title is-3">
-                Jogo Nintendo Switch Super Mario 3D World + Bowser's Fury
-              </h3>
-              <div class="stars">
-                <span class="icon">
-                  <i class="fas fa-star"></i>
-                </span>
-                <span class="icon">
-                  <i class="fas fa-star"></i>
-                </span>
-                <span class="icon">
-                  <i class="fas fa-star"></i>
-                </span>
-                <span class="icon">
-                  <i class="fas fa-star-half-alt"></i>
-                </span>
-                <span class="icon">
-                  <i class="far fa-star"></i>
-                </span>
-              </div>
+        </div>
+        <div class="column is-6">
+          <div class="product-detail">
+            <h3 class="title is-3">
+              Jogo Nintendo Switch Super Mario 3D World + Bowser's Fury
+            </h3>
+            <div class="stars">
+              <span class="icon">
+                <i class="fas fa-star"></i>
+              </span>
+              <span class="icon">
+                <i class="fas fa-star"></i>
+              </span>
+              <span class="icon">
+                <i class="fas fa-star"></i>
+              </span>
+              <span class="icon">
+                <i class="fas fa-star-half-alt"></i>
+              </span>
+              <span class="icon">
+                <i class="far fa-star"></i>
+              </span>
+            </div>
 
-              <div class="tabs-wrapper">
-                <ul class="tabs">
-                  <li class="tab is-active">
-                    Sandbox
-                  </li>
-                  <li class="tab">
-                    Other offers
-                  </li>
-                </ul>
+            <div class="tabs-wrapper">
+              <ul class="tabs">
+                <li class="tab is-active">
+                  Sandbox
+                </li>
+                <li class="tab">
+                  Other offers
+                </li>
+              </ul>
 
-                <div class="tab-content">
-                  <div class="row">
-                    <div class="column is-6">
-                      <p class="sales-price">$299</p>
-                      <p class="price">$399</span>
-                    </div>
-                    <div class="column is-6" style="padding:0">
-                      <button type="button" class="button is-primary is-large is-fullwidth">Add to cart</button>
-                    </div>
+              <div class="tab-content">
+                <div class="row">
+                  <div class="column is-6">
+                    <p class="sales-price">$299</p>
+                    <p class="price">$399</span>
                   </div>
-
-                  <p style="margin-bottom:16px;">
-                    <span class="has-text-green"> <i class="fas fa-star"
-                        style="display:inline-block;margin-right:4px;"></i>Disponível</span>
-                    Entrega estimada em 1 a 2 dias úteis
-
-                  </p>
-                  <a href="../index.html#product-row">See other products</a>
+                  <div class="column is-6" style="padding:0">
+                    <button type="button" class="button is-primary is-large is-fullwidth">Add to cart</button>
+                  </div>
                 </div>
 
+                <p style="margin-bottom:16px;">
+                  <span class="has-text-green"> <i class="fas fa-star"
+                      style="display:inline-block;margin-right:4px;"></i>Disponível</span>
+                  Entrega estimada em 1 a 2 dias úteis
+
+                </p>
+                <a href="../index.html#product-row">See other products</a>
               </div>
+
             </div>
           </div>
         </div>
+      </div>
       </div>
 
     </section>
