--- a/jose/dashboard.html
+++ b/jose/dashboard.html
@@ -31,6 +31,12 @@
       <nav class="navbar">
         <ul class="menu-list">
           <li class="menu-item">
+            <a href="products/index.html">Products</a>
+          </li>
+          <li class="menu-item">
+            <a href="dashboard.html">Dashboard</a>
+          </li>
+          <li class="menu-item">
             <a href="components/buttons/index.html">Buttons</a>
           </li>
           <li class="menu-item">
